--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+private_key.pem
+private_key-base64.txt
+public_key-base64.txt
